--- a/_posts/2014/2014-08-05-lego-post.md
+++ b/_posts/2014/2014-08-05-lego-post.md
@@ -23,7 +23,7 @@ It’s not too difficult to find data for Lego prices and number of pieces. If y
 
 Even though it’s easy to get, I only collected price data for a subset of the themes (mostly because I am lazy). If I put all of this data together, I can get a plot of the set price vs. number of pieces in set. Here is what that looks like:
 
-<p align="center"><iframe src="https://plot.ly/~RhettAllain/146/.embed" height="450" width="100%" frameborder="0" scrolling="no" seamless="seamless"></iframe></p>
+<iframe style="height: 500px; width: 98%; overflow: auto;" src="https://plot.ly/~RhettAllain/146/.embed" frameborder="0"></iframe>
 
 Let’s look at the linear function that fits this data. The slope of this line is 0.104 US Dollars per Lego piece. Boom. There is your answer. On average, one Lego piece costs 10.4 cents. Also, I think it’s nice to notice that this data is fairly linear.
 
@@ -35,13 +35,13 @@ If you are looking for a “good deal”, might I suggest the Trevi Fountain (21
 
 Suppose I break all the data into the different themes. If I fit a linear function to each of the different themes, I can get both the price per piece of Lego and the price of a zero piece set. Here are the brick prices for some of the Lego themes. The error bars are the uncertainties in the fit parameters.
 
-<p align="center"><iframe src="https://plot.ly/~RhettAllain/147/.embed" height="450" width="100%" frameborder="0" scrolling="no" seamless="seamless"></iframe></p>
+<iframe style="height: 500px; width: 98%; overflow: auto;" src="https://plot.ly/~RhettAllain/147/.embed" frameborder="0"></iframe>
 
 If you know what a Duplo block is, you probably aren’t surprised that they are the most expensive (63 cents per brick). These are bricks created for smaller kids. They are all large so that you can’t swallow them. It just makes since that they would cost more. The other expensive bricks are the City sets. But this is deceiving due to the high set prices of the train kits. I suspect if you removed these train sets from the plot, it would be a more normal price.
 
 What about the base cost? This is the y-intercept of the linear fit:
 
-<p align="center"><iframe src="https://plot.ly/~RhettAllain/148/.embed" height="450" width="100%" frameborder="0" scrolling="no" seamless="seamless"></iframe></p>
+<iframe style="height: 500px; width: 98%; overflow: auto;" src="https://plot.ly/~RhettAllain/148/.embed" frameborder="0"></iframe>
 
 Here you will notice that the City theme has a negative base cost. This means that if there were no pieces (on average) in a City set, Lego would pay YOU money. But why is this negative? It’s because of the high price of the train sets. They increase the slope of the linear fit but also push the y-intercept into negative values.
 
