--- a/_posts/2023/2023-01-14-2022-review-post.md
+++ b/_posts/2023/2023-01-14-2022-review-post.md
@@ -18,3 +18,4 @@ Same as last year, it was thrown together while watching football & Stranger Thi
 Looking over the past few years its interesting to see some of the continual themes as well as the overall evolution - where we started with many varying proofs of concept to today with a more focused and refined set of deliverables - I think its a reflection of where we are as a team and the larger organization we support.
 
 This year I had a lot on my plate so didn't quite get to invest the time I would've liked to, nevertheless, I always find it fruitful to reflect on the year, and here's simply a small snippet of some of the things we've managed to achieve!
+[2022 A Year In Review](https://clintbird.com/year/2022/)
