Updated with new views comment

--- a/_posts/2014/2014-11-07-musk-post.md
+++ b/_posts/2014/2014-11-07-musk-post.md
@@ -9,6 +9,8 @@ categories: business
 comments: true
 image: '/images/posts/2014/musk.jpg'
 ---
+_⚠️ **UPDATE**: I believe it would be wrong to remove old posts, as they reflect my thoughts at particular moments in time. With all that said, it’s important to acknowledge when my views have changed. I knew people who moved from Holden to Tesla, it offered them a new lifeline when the industry crashed in Australia. The man built a space company and revolutionized the EV industry - I genuinely believed he was steering us in the right direction. However, after the Twitter acquisition and his ongoing extremism - paired with a lack of reasonable stance (on any topic!) it’s become hard to watch him without losing respect as he continues to destroy his legacy._
+
 Quite a nice article showing an insight into Elon's thoughts and how he approaches business. Honestly its really refreshing to see someone at that level sticking to such strong principals, and even more inspiring seeing it pay off for him (originally posted on [Quartz](http://qz.com/292453/elon-musk-is-the-worlds-most-daring-ceo-and-here-are-the-quotes-that-prove-it/))
  
 Elon Musk articulated his simple approach to business in two sentences last night.
