--- a/_pages/21102015.md
+++ b/_pages/21102015.md
@@ -5,6 +5,11 @@ permalink: /21102015/
 ---
 Never gonna give you up, Never gonna let you down, Never gonna run around and desert you - Go on unmute it! 👇🔇
 
+<audio controls autoplay loop>
+  <source src="clintbird.com/files/21102015.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 <p><iframe src="https://player.vimeo.com/video/531874180?autoplay=1&loop=1&autopause=0&muted=1" loading="lazy" width="640" height="360" frameborder="0" allowfullscreen></iframe></p>
 
 Sorry, I know you were hoping for more  ¯\_(ツ)_/¯
