--- a/_pages/21102015.md
+++ b/_pages/21102015.md
@@ -6,7 +6,7 @@ permalink: /21102015/
 Never gonna give you up, Never gonna let you down, Never gonna run around and desert you - Go on unmute it! 👇🔇
 
 <div style="text-align: center;">
-  <img src="/images/headers/21102015.webp" loading="lazy" alt="Rick Rolled">
+  <img src="/images/headers/21102015.webp" loading="lazy" alt="Rick Rolled"><br>
   <audio controls autoplay loop>
   <source src="/files/misc/21102015.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
