--- a/_posts/2025/2025-12-18-NFT-post.md
+++ b/_posts/2025/2025-12-18-NFT-post.md
@@ -32,4 +32,5 @@ image: '/images/posts/2025/vibe.jpg'
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
-<script src="/assets/js/riddle.js"></script>
+
+<script src="/_assets/js/riddle.js"></script>
