--- a/_posts/2025/2025-12-18-NFT-post.md
+++ b/_posts/2025/2025-12-18-NFT-post.md
@@ -33,5 +33,6 @@ image: '/images/posts/2025/vibe.jpg'
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
 
-<script src="/js/riddle.js"></script>
+<script src="/js/pixelgate.js"></script>
+
 
