--- a/_posts/2025/2025-12-18-NFT-post.md
+++ b/_posts/2025/2025-12-18-NFT-post.md
@@ -19,6 +19,68 @@ image: '/images/posts/2025/vibe.jpg'
 > What am I?
 
 ---
+<style>
+  #wallet, #riddle {
+    background: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 20px 0;
+  }
+
+  #wallet button, #riddle button {
+    background: #000;
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s;
+  }
+
+  #wallet button:hover, #riddle button:hover {
+    background: #333;
+  }
+
+  #address {
+    margin-top: 12px;
+    font-family: monospace;
+    color: #495057;
+  }
+
+  #riddle input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 6px;
+    margin-bottom: 12px;
+    font-size: 16px;
+  }
+
+  #result {
+    margin-top: 16px;
+    padding: 12px;
+    border-radius: 6px;
+    display: none;
+  }
+
+  #result.show { display: block; }
+  #result.success { background: #d4edda; color: #155724; }
+  #result.error { background: #f8d7da; color: #721c24; }
+  #result a { color: #667eea; }
+</style>
+
+<div id="wallet">
+  <button id="connect">Connect Wallet</button>
+  <p id="address"></p>
+</div>
+
+<div id="riddle">
+  <input id="answer" placeholder="Your answer..." />
+  <button id="solve">Solve the riddle</button>
+  <p id="result"></p>
+</div>
 
 <div id="wallet">
   <button id="connect">Connect Wallet</button>
@@ -34,5 +96,6 @@ image: '/images/posts/2025/vibe.jpg'
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
 
 <script src="/js/pixelgate.js"></script>
+
 
 
