--- a/_posts/2025/2025-12-18-NFT-post.md
+++ b/_posts/2025/2025-12-18-NFT-post.md
@@ -44,9 +44,16 @@ image: '/images/posts/2025/vibe.jpg'
   }
 
   #address {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 6px;
     margin-top: 12px;
     font-family: monospace;
     color: #495057;
+    background: #fff;
+    font-size: 16px;
+    box-sizing: border-box;
   }
 
   #riddle input {
@@ -72,19 +79,8 @@ image: '/images/posts/2025/vibe.jpg'
 </style>
 
 <div id="wallet">
-  <button id="connect">Connect Wallet</button>
   <p id="address"></p>
-</div>
-
-<div id="riddle">
-  <input id="answer" placeholder="Your answer..." />
-  <button id="solve">Solve the riddle</button>
-  <p id="result"></p>
-</div>
-
-<div id="wallet">
   <button id="connect">Connect Wallet</button>
-  <p id="address"></p>
 </div>
 
 <div id="riddle">
@@ -96,6 +92,7 @@ image: '/images/posts/2025/vibe.jpg'
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
 
 <script src="/js/pixelgate.js"></script>
+
 
 
 
